Don't show confirmation dialog for Trash action by default

Summary:
Dolphin and KIO default confirmation settings were not in sync: the former
defaults to not showing the dialog while the latter used to default to the
opposite.

This change resolves the inconsistency by adjusting KIO defaults.

BUG: 385492
FIXED-IN: 5.48

Test Plan:
  1. Create a new user account and log into it.
  2. Open Dolphin.
  3. Create a text file and hit Del. The confirmation dialog should *not*
     appear.
  4. Check that permanent deletion (Shift+Del) and emptying the Trash still
     show the confirmation dialog.

Reviewers: dfaure, #frameworks, #dolphin, ngraham

Reviewed By: dfaure, #dolphin, ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D13921